--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <img src="./20240714_173146.jpg" height="200" alt="profile"/>
 
 <h2>SUMMARY</h2>
-<p>im a hardworking persson seeking a job.</p><hr />
+<p>Im a hardworking person seeking a job.</p><hr />
 <h2>EDUCATION</h2>
 <ul>
     <li>B.E Mechanical engineering (2022-2026)</li>
