--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
 <H2>OTHERS</H2>
 <a href="./HOBBIES.html">My hobbies</a><br />
 <a href="contact.html">My Contact</a>
+    <footer>
+        <p>© Abhishek Solomon. All rights reserved</p>
+    </footer>
 </body>
 </html>
